Add support for markdown notifications
